--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,3 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.steptracker">
-
-    <application />
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"  package="com.steptracker">
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 </manifest>
