--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,36 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"  package="com.steptracker">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.steptracker">
+
+    <!-- ─── Permisos ─── -->
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
+    <application
+        android:allowBackup="true"
+        android:label="StepTracker"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+
+        <!-- Servicio de pasos -->
+        <service
+            android:name=".StepTrackerService"
+            android:exported="false"
+            android:foregroundServiceType="health" />
+
+        <!-- BootReceiver para reiniciar servicio tras reboot -->
+        <receiver
+            android:name=".BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+    </application>
+
 </manifest>
