--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
   }
 }
 
@@ -29,6 +30,7 @@ android {
 
 dependencies {
   implementation "com.facebook.react:react-native:+"
+  implementation "androidx.work:work-runtime-ktx:2.9.0"
 }
 
 apply plugin: 'com.android.library'
