feat: update react

--- a/stepJourney/app.json
+++ b/stepJourney/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "tempNativeProject",
-  "displayName": "Temp Native Project"
+  "name": "stepJourney",
+  "displayName": "stepJourney"
 }
