--- a/stepJourney/android/settings.gradle
+++ b/stepJourney/android/settings.gradle
@@ -1,6 +1,9 @@
-rootProject.name = 'tempNativeProject'
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+pluginManagement { includeBuild("../node_modules/@react-native/gradle-plugin") }
+plugins { id("com.facebook.react.settings") }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
+rootProject.name = 'stepJourney'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
 include ':react-native-smart-step-tracker'
-project(':react-native-smart-step-tracker').projectDir = new File(rootProject.projectDir, '../../android')
+project(':react-native-smart-step-tracker').projectDir =
+    new File(rootProject.projectDir, '../../android')
